# DemoStitching

./: .gitignore  LICENSE  README.md  build_k3d_dataset.py  compare_stitch_methods.py  configs.py  graph_utils.py  live.py  main.py  main_single.py  main_stitch.py  main_stitch_live.py  plots.ipynb  pyproject.toml  requirements.txt  sweep.py
dataset/stitching/: .gitignore  nodes_1.json  nodes_1.pkl  nodes_2.json  nodes_2.pkl
docs/: index.html
scripts/: build_obstacle_bottle2shelf_dataset.py  build_pcgmm_workspace_dataset.py  build_pcgmm_workspace_simple_dataset.py  build_workspace_dataset.py  compare_stitch_methods.py  comparison_plots.py  latex_summary.py  run_main_stitch_chain_example.py  visualize_robottasks.py
src/: graph_utils.py  lpvds_class.py
src/damm/: main.py
tests/: test_ablation_analysis.py  test_chain_plot_regions.py  test_chaining.py  test_compare_stitch_methods.py  test_configs.py  test_damm_tuning.py  test_dsopt_retry.py  test_gaussian_directions.py  test_graph_utils_compat.py  test_graph_utils_shortest_path_tree.py  test_k3d_dataset.py  test_live_datapoints.py  test_load_tools_order.py  test_load_tools_plot_extent.py  test_main_stitch_failure_handling.py  test_main_stitch_flow_plotting.py  test_main_stitch_helpers.py  test_main_stitch_live.py  test_main_stitch_node_ids.py  test_main_stitch_plot_extent.py  test_main_stitch_sweep.py  test_metrics_fast_exact.py  test_pcgmm_workspace_dataset.py  test_plot_tools_3d.py  test_plot_tools_colormap.py  test_plot_tools_figure_close.py  test_robottasks_workspace_dataset.py  test_sweep.py
(+130 files in other folders)
