[project]
name = "lpvds"
version = "0.1.0"
description = "Learning Linear Parameter Varying Dynamical Systems"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gmr",
    "numpy",
    "scipy",
    "matplotlib",
    "pyLasaDataset",
    "casadi",
    "cvxpy",
    "dtw-python",
    "pandas",
    "fastdtw",
    "scikit-learn",
    "networkx",
]

[tool.uv]
managed = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
